--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Inter:wght@200&family=Itim&family=Lato&family=Montserrat:wght@300&family=Poppins:wght@300&display=swap');
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+    --bannerheight: 30px;
+    --navheight: 50px;
+    --dropdownheight: 37.5px;
+    --slide_tab_hgt: 40px;
+    --main-bg: #222823;
+    --main-bg2: #313732;
+    --main-bg3: #242A25;
+    --main-bg4: #131815;
+    --main-bg5: #0b0d0c;
+    --main-txt: #FFFDFA;
+    --main-txt2: #d6d6d6;
+    --alternate-bg: #020887;
+    --alternate-bg2: #0A81D1;
+    --alternate-bg3: #0CCA4A;
+    --alternate-bg4: #7871ff;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    padding-top: calc(var(--navheight) + var(--bannerheight));
+    overflow-x: hidden;
+    background-color: black;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+    font-family: brat;
+    src: url('/fonts/There\ Brat.ttf');
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.emphasize {
+    color: rgb(211, 26, 155);
+}
+
+#banner {
+    background: linear-gradient(120deg, var(--alternate-bg3), var(--alternate-bg2));
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: var(--bannerheight);
+    z-index: 13;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Cabin', sans-serif;
 }
