--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
     --main-bg5: #0b0d0c;
     --main-txt: #FFFDFA;
     --main-txt2: #d6d6d6;
+    --alternate-txt: #d31a9b;
     --alternate-bg: #020887;
     --alternate-bg2: #0A81D1;
     --alternate-bg3: #0CCA4A;
