fixed mobile projects bug

--- a/components/SidePanel/SidePanel.module.css
+++ b/components/SidePanel/SidePanel.module.css
@@ -6,8 +6,7 @@
 
     z-index: 10;
     position: fixed;
-    top: var(--navheight);
-    bottom: 45px; /* not sure why this works, via stack overflow */
+    /*bottom: 45px; /* not sure why this works, via stack overflow */
     left: 0;
 
     padding: 45px 0;
