--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -29,6 +29,7 @@
     display: inline;
     margin: 0 30px;
     transition: 200ms;
+    position: relative;
 }
 
 .Link:hover > a {
@@ -39,4 +40,20 @@
     text-decoration: none;
     color: white;
     transition: inherit;
+}
+
+.Link > img {
+    position: absolute;
+    top: var(--navheight);
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    padding: 10px;
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% { box-shadow: none; }
+    50% { box-shadow: 0 2px 10px rgba(0, 0, 0, 0.34); }
+    100% { box-shadow: none; }
 }
