--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,8 +4,10 @@
 }
 
 .Home > main {
-    height: calc(100vh - var(--navheight));
+    height: calc(100vh - calc(var(--navheight) + var(--bannerheight)));
     width: 100vw;
+    color: var(--main-bg4);
+    background-color: var(--main-txt);
 
     display: flex;
     justify-content: center;
@@ -13,29 +15,33 @@
     flex-direction: column;
 }
 
-.Home > main > .Name {
-    color: white;
-    font-family: brat;
-    font-size: 100px;
-    text-shadow: 2px 2px 4px rgba(78, 78, 78, 0.7);
+.Home > main > h1 {
     text-align: center;
+    font-family: 'Poppins';
+    font-size: 50px;
+}
+.Home > main > h3 {
+    text-align: center;
+    font-family: 'Poppins';
+    font-size: 22px;
 }
 
-.Home > main > ul {
-    display: flex;
-}
-
-.Home > main > ul > * {
-    margin: 10px;
-}
-
-.Home > main > input {
-
-    display: block;
-    color: black;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    max-height: 10vh;
-    max-width: 50%;
+.Home > main > blockquote {
     margin-top: 50px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.Home > main > blockquote > p{
+    font-size: 20px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 3px 25px;
+}
+.Home > main > blockquote > p > i {
+    margin: 0 2px;
+}
+.Home > main > blockquote > p > span {
+    color: var(--alternate-bg2);
 }
