--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,11 +19,13 @@
     text-align: center;
     font-family: 'Poppins';
     font-size: 50px;
+    padding: 0 50px;
 }
 .Home > main > h3 {
     text-align: center;
     font-family: 'Poppins';
     font-size: 22px;
+    padding: 0 50px;
 }
 
 .Home > main > blockquote {
