--- a/components/Projects/GoogleBlogger/GoogleBlogger.module.css
+++ b/components/Projects/GoogleBlogger/GoogleBlogger.module.css
@@ -12,6 +12,7 @@
     align-self: center;
     cursor: pointer;
     text-decoration: underline;
+    margin-bottom: 20px;
 }
 .OpenModal:hover {
     scale: 1.1;
