--- a/components/CodeSnippet/CodeSnippet.module.css
+++ b/components/CodeSnippet/CodeSnippet.module.css
@@ -7,26 +7,35 @@
     padding: 25px 20px calc(50px + 20px + 25px);
     border-radius: 0.5rem;
     background-color: var(--main-bg4);
-    overflow-y: scroll;
+    overflow: scroll;
+
+    box-shadow: 0 2px 10px black;
+    cursor: pointer;
 }
 
 .Code::-webkit-scrollbar {
-    width: 0.5em;
+    /* width: 0.5em;
     border-bottom-right-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
+    border-top-right-radius: 0.5rem; */
+    width: 0;
+    height: 0;
 }
    
 .Code::-webkit-scrollbar-track {
-    border-top-right-radius: 0.5rem;
+    /* border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    width: 0;
+    height: 0;
 }
    
 .Code::-webkit-scrollbar-thumb {
-    border-top-right-radius: 0.5rem;
+    /* border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
     background-color: rgb(211, 26, 155, 0.3);
-    outline: 1px solid rgb(211, 26, 155, 0.3);
+    outline: 1px solid rgb(211, 26, 155, 0.3); */
+    width: 0;
+    height: 0;
 }
 
 
@@ -72,6 +81,7 @@
     margin: 0 !important;
     min-height: 90%;
     height: fit-content;
+    width: fit-content;
 }
 
 .Code > pre > code {
