--- a/pages/projects/Projects.module.css
+++ b/pages/projects/Projects.module.css
@@ -11,6 +11,7 @@
 .Projects_Container {
     min-height: calc(100vh - calc(var(--bannerheight) + var(--navheight) + var(--dropdownheight)));
     width: 100%;
+    background-color: #222823;
 }
 
 .Projects_Container > header {
