--- a/pages/projects/fullstack/fullstack.module.css
+++ b/pages/projects/fullstack/fullstack.module.css
@@ -49,17 +49,18 @@
     padding: 25px;
 }
 .Shortcuts > li {
-    margin: 15px 10px;
+    margin: 10px 10px;
     font-size: 16px;
-    min-height: 20px;
+    line-height: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 7.5px 15px;
-    border-radius: 1.5rem;
+    border-radius: 8px;
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.46);
-    background-color: var(--main-bg4);
+    background-image: linear-gradient(45deg, var(--main-bg), var(--main-bg4));
+    border: 1px solid var(--main-bg4);
 }
 .Shortcuts > li > a {
     text-decoration: none;
@@ -191,7 +192,7 @@
 
 
 .Projects {
-    padding: 50px 50px 50px;
+    padding: 50px 0 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -199,9 +200,9 @@
 }
 .Projects > section {
     max-width: min(800px, 90%);
-    margin-bottom: 10vh;
-    padding-bottom: 10vh;
-    border-bottom: 1px solid white;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    border-bottom: 5px solid var(--main-bg3);
 }
 
 @media screen and (max-width: 800px) {
